--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
       "allowJs": true,
       "moduleResolution": "node",
       "esModuleInterop": true,
-
+      "lib": ["DOM.Iterable", "dom"]
     }
   }
